<resources>
    <string name="app_name">Pocket Rush</string>
    <string name="wallet">Deposit</string>
    <string name="_0"> 0</string>
    <string name="earning">Winning</string>
    <string name="more_spin">More Spin</string>
    <string name="withdraw">Wallet</string>

    <string name="enter_your_number">Enter your number</string>
    <string name="enter_coin">Enter Amount</string>
    <!--spin value-->
    <string name="case_1">15</string>
    <string name="case_2">20</string>
    <string name="case_3">-10</string>
    <string name="case_4">25</string>
    <string name="case_5">45</string>
    <string name="case_6">60</string>
    <string name="case_7">50</string>
    <string name="case_8">35</string>
    <string name="case_9">5</string>
    <string name="case_10">30</string>
    <string name="case_11">70</string>
    <string name="case_12">10</string>
    <string name="case_13">-25</string>
    <string name="case_14">55</string>
    <string name="case_15">40</string>
    <string name="win_amount">Congrats!! you have won</string>
    <string name="amount_will_be_added_to_your_account">Amount Will be added to your Winnings</string>
    <string name="collect">Spin More</string>
    <string name="play">Play</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="home">Home</string>
    <string name="privacy_amp_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="minimum_withdraw_500">Minimum withdraw ₹ 500</string>
    <string name="my_wallet">Coin</string>
    <string name="_10">10</string>
    <string name="min_deposit">Minimum deposit limit is</string>
    <string name="enter_amount">Enter amount</string>

    <string name="first_deposit">52</string>
    <string name="second_deposit">80</string>
    <string name="third_deposit">130</string>
    <string name="fourth_deposit">170</string>
    <string name="fifth_deposit">220</string>
    <string name="sixth_deposit">320</string>

    <string name="first_deposit_option">Get ₹10 on ₹100 or above payments</string>
    <string name="second_deposit_option">Get ₹30 on ₹150 or above payments</string>
    <string name="third_deposit_option">Get ₹60 on ₹200 or above payments</string>
    <string name="fourth_deposit_option">Get ₹100 on ₹250 or above payments</string>
    <string name="terms"><![CDATA[Terms&Condition]]></string>
    <string name="are_you_sure_close_this_app">Are You Sure close this app?</string>
    <string name="your_reward_point">Your Reward Point</string>
    <string name="withdraw2">Withdraw</string>
    <string name="default_web_client_id">988226728801-no5h72j7vu7mo0imlm812vvsd8g9720s.apps.googleusercontent.com</string>
    <string name="log_in_with_google">Log In with Google</string>
    <string name="logout">Exit app</string>
    <string name="by_signin_to_the_app_you_agree_to_the_our">By signin to the app you agree to the our</string>
    <string name="and">And</string>
    <string name="welcome_to_pocket_rush">Welcome to Pocket Rush</string>
</resources>