<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_250sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@color/white"
    app:strokeColor="@color/app_color"
    app:strokeWidth="@dimen/_2sdp"
    android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_marginVertical="@dimen/_20sdp"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_reward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/your_reward_point"
        android:textColor="@color/app_color"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"/>
    <ImageView
        android:layout_below="@id/tv_reward"
        android:id="@+id/iv_win"
        android:layout_width="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_height="@dimen/_80sdp"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:src="@drawable/winner" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_win"
        android:layout_marginHorizontal="@dimen/_30sdp"
 android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_win"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/win_amount"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"/>




    </LinearLayout>



    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll"
        android:layout_marginHorizontal="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:text="@string/amount_will_be_added_to_your_account"
        android:textSize="@dimen/_12sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_spin_more"
        android:layout_width="220dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_below="@+id/tv_msg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_15sdp"
        app:cornerRadius="12dp"
         android:backgroundTint="@color/app_color"
        android:gravity="center"
        android:text="@string/collect"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />
</RelativeLayout>

</com.google.android.material.card.MaterialCardView>