<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WithdrawActivity">

    <RelativeLayout
        android:id="@+id/llTopbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/app_color">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_5sdp"
            android:src="@drawable/baseline_arrow_back_24"
            app:tint="@color/white"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_toEndOf="@+id/ivBack"
            android:text="@string/withdraw"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/walletcv"
        android:layout_below="@id/llTopbar"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:backgroundTint="@color/grey">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/archivo_semibold"
                    android:text="@string/my_wallet"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/archivo_medium"
                    android:text="@string/winning_amount_in_wallet"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvBalance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_10"
                        android:textColor="@color/black"
                        android:textSize="22sp" />
                </LinearLayout>



            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:src="@drawable/wallet" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/custom_edittext"
        android:layout_below="@id/walletcv"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivPaytm"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp"
                    android:scaleType="fitEnd"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:src="@drawable/paytm" />
                <View
                    android:layout_width="2dp"
                    android:layout_height="@dimen/_35sdp"
android:background="@color/black"/>
                <ImageView
                    android:id="@+id/ivUpi"

                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:scaleType="fitStart"
                    android:src="@drawable/upi" />
            </LinearLayout>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                android:backgroundTint="@color/white"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginLeft="@dimen/_3sdp"
                        android:src="@drawable/baseline_local_phone_24"
                        app:tint="@color/grey" />


                    <EditText
                        android:id="@+id/etNumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/enter_your_number"
                        android:inputType="number"
                         android:paddingLeft="@dimen/_5sdp"
                        android:textColor="@color/black" />
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"

                android:backgroundTint="@color/white"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/withdraw"
                        android:layout_marginLeft="@dimen/_3sdp"
                        app:tint="@color/grey" />

                    <EditText
                        android:id="@+id/etCoin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
android:inputType="number"
                        android:hint="@string/enter_coin"
                        android:paddingLeft="@dimen/_5sdp"
                        android:textColor="@color/black" />
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/archivo_semibold"
                android:text="@string/minimum_withdraw_500"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnWithdraw"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:backgroundTint="@color/app_color"
                android:text="@string/withdraw"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_5sdp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>